# velocty

./: .gitignore  Architecture.md  Cargo.toml  DESIGN.md  README-CMS.md  README.md  Rocket.toml  velocty.toml
.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  DEPLOYMENT.md  DESIGN.md  MULTI-SITE.md  PROGRESS.md  README-CMS.md  TESTS.md  firewall-spec.md  manual-testing.md
src/: ai.rs  analytics.rs  auth.rs  boot.rs  db.rs  email.rs  health.rs  image_proxy.rs  images.rs  license.rs  main.rs  rate_limit.rs  render.rs  rss.rs  seo.rs  site.rs  svg_sanitizer.rs  tasks.rs  tests.rs
src/ai/: cloudflare.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  prompts.rs
src/designs/: common.rs  mod.rs
src/designs/contact/: mod.rs
src/designs/inkwell/: journal.rs
src/designs/journal/: list_classic.rs  list_compact.rs  list_editorial.rs  list_wide.rs  mod.rs
src/designs/oneguy/: mod.rs
src/email/: brevo.rs  gmail.rs  mailgun.rs  mandrill.rs  mod.rs  moosend.rs  postmark.rs  resend.rs  sendpulse.rs  ses.rs  smtp.rs  sparkpost.rs
src/import/: mod.rs  tumblr.rs  wordpress.rs
src/models/: analytics.rs  audit.rs  category.rs  comment.rs  design.rs  firewall.rs  import.rs  mod.rs  order.rs  passkey.rs  portfolio.rs  post.rs  search.rs  settings.rs  tag.rs  user.rs
src/mta/: deliver.rs  dkim.rs  dns.rs  mod.rs  queue.rs
src/routes/: admin.rs  admin_api.rs  ai.rs  api.rs  auth.rs  commerce.rs  deploy.rs  mod.rs  public.rs  super_admin.rs
src/routes/admin/: api.rs  categories.rs  comments.rs  dashboard.rs  designs.rs  firewall.rs  health.rs  import.rs  media.rs  mod.rs  portfolio.rs  posts.rs  sales.rs  seo_audit.rs  settings.rs  users.rs
src/routes/ai/: generate.rs  mod.rs  status.rs  suggest.rs
src/routes/commerce/: mod.rs  mollie.rs  payoneer.rs  paypal.rs  razorpay.rs  square.rs  stripe.rs  twocheckout.rs
src/routes/security/: mod.rs
src/routes/super_admin/: auth.rs  dashboard.rs  health.rs  mod.rs  sites.rs
src/security/: akismet.rs  auth.rs  cleantalk.rs  hcaptcha.rs  magic_link.rs  mfa.rs  mod.rs  oopspam.rs  passkey.rs  password_reset.rs  recaptcha.rs  turnstile.rs
src/security/firewall/: fairing.rs  inspect.rs  mod.rs
src/seo/: analytics.rs  audit.rs  jsonld.rs  meta.rs  mod.rs  sitemap.rs  webmaster.rs
src/store/: mod.rs  mongo.rs  sqlite.rs
src/typography/: mod.rs
website/: sites.db
website/site/db/: velocty.db
website/static/css/: admin.css
website/static/js/: admin.js
website/templates/: download.html.tera
(+72 files in other folders)
